# policy-evaluator

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: tests.yml
crates/burrego/: Cargo.toml
crates/burrego/.github/workflows/: tests.yml
crates/burrego/src/opa/: evaluation_result.rs  mod.rs  wasm.rs
src/: lib.rs  policy.rs  policy_artifacthub.rs  policy_evaluator.rs  policy_evaluator_builder.rs  policy_metadata.rs
src/callback_handler/: crypto.rs
