[package]
name = "policy-evaluator"
version = "0.2.16"
authors = [
  "Flavio Castelli <fcastelli@suse.com>",
  "Rafael Fernández López <rfernandezlopez@suse.com>"
]
edition = "2018"

[workspace]
members = [
  "crates/burrego"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
burrego = { path = "crates/burrego" }
cached = "0.30.0"
hyper = { version = "0.14" }
json-patch = "0.2.6"
kube = { version = "0.68.0", default-features = false, features = ["client", "rustls-tls"] }
lazy_static = "1.4.0"
#policy-fetcher = { git = "https://github.com/kubewarden/policy-fetcher", tag = "v0.6.0" }
policy-fetcher = { path = "../policy-fetcher" }
sha2 = "0.10.2"
olpc-cjson = "0.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "^1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-futures = "0.2"
validator = { version = "0.14", features = ["derive"] }
wasmparser = "0.82.0"
# Given we are using a git repository, we need to point both
# dependencies to the same tag. Otherwise, traits that are shared by
# both crates are considered different. This can be removed once a new
# version of `wapc` has been pushed to crates.io.
wapc = { git = "https://github.com/wapc/wapc-rs", tag = "wapc@1.0.0-alpha.1" }
wasmtime-provider = { git = "https://github.com/wapc/wapc-rs", tag = "wapc@1.0.0-alpha.1" }
url = "2.2.2"

[dev-dependencies]
assert-json-diff = "2.0.1"
# TODO: this dependency can get in conflict with the one used by the kubewarden-policy-sdk
# We should expose k8s-openapi via kubewarden-policy-sdk maybe?
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_22"] }
